src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>SOPS_Override_ARR_Calc_for_PipeLTE98__c</fullName>
        <description>Added in SFDC-0145v4.  Used by Sales Ops Only. There is a calculation feature (SFDC-0145) that assists with writing values to the oppty product line item&apos;s &quot;ARR&quot; field for pipeline opportunities less than or equal to stage 98 (Sales Ops Review).   Optionally use this override.</description>
        <inlineHelpText>Used by Sales Ops Only. There is a calculation feature (SFDC-0145) that assists with writing values to the oppty product line item&apos;s &quot;ARR&quot; field for pipeline opportunities less than or equal to stage 98 (Sales Ops Review).   Optionally use this override.</inlineHelpText>
        <label>SOPS Override ARR Calc for PipeLTE98</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BTW, OpportunityLinteItem.Subscription2__c replaces OpportunityLinteItem.Subscription__c.   OpportunityLinteItem.Subscription__c (formula) pre-dates me, and suffers this GA LIMIT ideaView?id=08730000000DfL5AAK.  OpportunityLinteItem.Subscription2__c solves that a VR enforces &quot;Dont edit this field, let the apex edit this field&quot;.   OpportunityLineItem.Subscription2__c  SOON REPLACES  /00N6A000009M85o/e?setupid=OpportunityLineItemFields&amp;retURL=%2F00N6A000009M85o.  OpportunityLineItem.Subscription2__c  is maintained by Apex because Process Builders are slower than apex and this org has performance issues. Chose Apex over WFRFU because of GA LIMIT ideaView?id=08730000000BqKe</description>
        <inlineHelpText>This field represents The Product2.Subscription_Product__c &quot;Dont edit this field, let the apex edit this field&quot;</inlineHelpText>
        <label>Subscription2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <description>suffers this limitation: https://trailblazer.salesforce.com/ideaView?id=08730000000DfL5AAK.  This limited formula will soon sunset/deprecate/be replaced by OpportunityLineItem.Product2Subscription__c</description>
        <formula>PricebookEntry.Product2.Subscription_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>suffers this limitation: https://trailblazer.salesforce.com/ideaView?id=08730000000DfL5AAK.  This limited formula will soon sunset/deprecate/be replaced by OpportunityLineItem.Product2Subscription__c</inlineHelpText>
        <label>Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sugar_Created_Date__c</fullName>
        <label>Sugar Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sugar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sugar ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tenant_ID__c</fullName>
        <description>Field introduced in SFDC-0542. This is currently visible only to system admins. Length 40 chosen arbitrarily.</description>
        <inlineHelpText>Field introduced in SFDC-0542. This is currently visible only to system admins</inlineHelpText>
        <label>Tenant ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <description>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity.</description>
        <inlineHelpText>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity.</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <description>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity.</description>
        <inlineHelpText>Added in project a7z3s0000004SGsAAM to replace a similar field that previously existed on Opportunity.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Test Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Reason__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <inlineHelpText>Only applicable to ARR products</inlineHelpText>
        <label>Upsell Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>More Instances</fullName>
                </value>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Support Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>aSaveThatBypassesValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>aSaveThatBypassesValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_id_for_n4jSFDC_sandbox_use_only__c</fullName>
        <description>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</description>
        <externalId>true</externalId>
        <inlineHelpText>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</inlineHelpText>
        <label>external id for n4jSFDC sandbox use only</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>neo4j_apexBypass_context__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field.  Dont change this.  This is to only be set by local namespaced apex,  which is hard to enforce for managed packages therefore make sure no managed package has access to this field.</description>
        <inlineHelpText>System field.  Dont change this.  This is to only be set by local namespaced apex,  which is hard to enforce for managed packages therefore make sure no managed package has access to this field.</inlineHelpText>
        <label>neo4j_apexBypass_context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Added_To_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this was previously added to a project during the create project process. If checked it will not be picked up in the next create project</description>
        <label>Added To Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProductLine__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field was unused so we &apos;override&apos;  its label in Setup&gt;Override to &quot;z_deprecatedFeb3&apos;21 (isSvcsProductLine)&quot;</inlineHelpText>
        <label>IsServicesProductLine</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>ARR_for_Sub_Products_Only</fullName>
        <active>true</active>
        <description>context: 2020-03-05T15:04:05-0800</description>
        <errorConditionFormula>AND( 

/* COMMENTED LINE:     NOT($User.Id == &apos;0053s00000355XM&apos;), data load exclusion for Peter Noges on 2020-11-05 during SFDC-0488, this line commented thereafter.*/
NOT(neo4j_apexBypass_context__c),
Subscription__c &lt;&gt; true, 

TEXT(ARR__c) &lt;&gt; &quot;0&quot;)</errorConditionFormula>
        <errorDisplayField>ARR__c</errorDisplayField>
        <errorMessage>Only Subscription Products may have ARR populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_Products_on_Closed_won_Deals</fullName>
        <active>true</active>
        <description>context: 2020-03-05T15:05:00-0800
Pre-release-of-SFDC-0143 note: At first i thought to SUNSET this. But in hindsight, will keep this &apos;active&apos; in project SFDC-0143-v1</description>
        <errorConditionFormula>AND(
/*NOT(neo4j_apexBypass_context__c), This Line Commented until the apex &amp; declarative side are bugfixed/patched from sandbox: ApxCtxRedo such that the persistent state for neo4j_apexBypass_context__c is FALSE. Until then too many records have bad data (true values) in neo4j_apexBypass_context__c*/
NOT(CONTAINS($User.Username, &quot;peter.noges@neo4j.com&quot;)), /*developer, exclude for data migration sfdc-0145*/
ISPICKVAL((Opportunity.StageName),&quot;Closed Won&quot;),
NOT($Permission.Bypass_Cannot_Edit_Closed_Won_Oppty_Validation_Rule),
NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
        <errorMessage>Line Items associated with Closed Won Opportunities cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_SalesPrice_and_Qty_Fields</fullName>
        <active>true</active>
        <description>Prevents users with specific profiles from from being able to edit Sales Price and Quantity
fields on the Opportunity Product. JIRA: SFDCSPT-240</description>
        <errorConditionFormula>AND(
NOT(neo4j_apexBypass_context__c),
     OR(
         ISCHANGED( UnitPrice ),
         ISCHANGED( Quantity )),

				 OR(
         $Profile.Name = &quot;Neo4j - Engineering&quot;,
         $Profile.Name = &quot;Neo4j - Customer Success&quot;, 
         $Profile.Name = &quot;Neo4j - Finance&quot;, 
         $Profile.Name = &quot;Neo4j - Legal&quot;)
)</errorConditionFormula>
        <errorMessage>You do not have rights to edit this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Select_Renewal_in_Type_Field</fullName>
        <active>true</active>
        <description>Only admins and certain users are allowed to select &quot;Renewal&quot; from the &quot;Type&quot; field&apos;s picklist. This is because renewals are created automatically.</description>
        <errorConditionFormula>AND(
OR(ISNEW(),
ISCHANGED(Product_Type__c)),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Permission.Opp_Product_Bypass_Cannot_Select_Renewal_in_Type_Field_Validation_Rule), 
ISPICKVAL(Product_Type__c, &quot;Renewal&quot;)
)</errorConditionFormula>
        <errorDisplayField>Product_Type__c</errorDisplayField>
        <errorMessage>You cannot select &apos;Renewal&apos; for &apos;Type&apos; field, because Renewal Opportunities with their associated Products are created automatically.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_and_Finance_Field_Restrictions</fullName>
        <active>true</active>
        <description>Prevents field and finance from being able to edit sales price and quantity
context: 2020-03-05T15:05:48-0800</description>
        <errorConditionFormula>And(
     Or(
         ISCHANGED( UnitPrice ),

         ISCHANGED( Quantity )),
Or(
  $Profile.Name = &quot;Neo4j - Engineering&quot;,
$Profile.Name = &quot;Neo4j - Finance&quot;))</errorConditionFormula>
        <errorMessage>You do not have rights to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_both_exist_RequireTermEndGteTermStart</fullName>
        <active>true</active>
        <description>Added in project SFDC-0145 for data quality and to support ARR calculation logic.</description>
        <errorConditionFormula>if(
and(
NOT(neo4j_apexBypass_context__c),
NOT(CONTAINS($User.Username, &quot;peter.noges@neo4j.com&quot;)), /*developer, exclude for data migration sfdc-0145*/


not(isblank(Term_Start_Date__c)),
not(isblank(Term_End_Date__c)),
Term_End_Date__c&lt;Term_Start_Date__c
),true,false)</errorConditionFormula>
        <errorDisplayField>Term_End_Date__c</errorDisplayField>
        <errorMessage>Term End Date must be greater or equal to Term Start Date, or left blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InstanceProvisDateNoGreaterThanTermStart</fullName>
        <active>true</active>
        <description>Instance provisioned data cannot be greater than the terms start date. If a new instance must be provisioned, it must be done before the term start date, because we can&apos;t start charging them without providing what they&apos;re paying for. SFDCSPT-295;</description>
        <errorConditionFormula>Instance_Provisioned__c &gt; Term_Start_Date__c</errorConditionFormula>
        <errorMessage>Attention: Instance Provisioned Date cannot be later than the Term Start Date!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Changing_Type_From_Renewal</fullName>
        <active>true</active>
        <description>Prevents users from changing the existing &apos;Renewal&apos; value in the &apos;Product_Type__c&apos; field to another value. Permission set with the custom permission that allows users to bypass it: ‘Opportunity Product: Edit Product_Type__c Field’. JIRA: SFDCSPT-482</description>
        <errorConditionFormula>AND(
NOT(neo4j_apexBypass_context__c),
NOT($Permission.Opportunity_Product_Bypass_Prevent_Changing_Type_From_Renewal_Validation_Rule), 
NOT($Profile.Name = &quot;System Administrator&quot;), 
ISPICKVAL(PRIORVALUE(Product_Type__c),&quot;Renewal&quot;),
NOT(ISPICKVAL(Product_Type__c,&quot;Renewal&quot;)))</errorConditionFormula>
        <errorDisplayField>Product_Type__c</errorDisplayField>
        <errorMessage>Products already designated as Renewal should not be adjusted. Please create a new Product to indicate an Up-Sell, Cross-Sell or New or reach out to Sales Operations if this Product should not be Renewal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_must_be_1</fullName>
        <active>true</active>
        <description>ensure quantity is always 1 regardless
context: 2020-03-05T15:10:35-0800</description>
        <errorConditionFormula>AND(

/* COMMENTED LINE:     NOT($User.Id == &apos;0053s00000355XM&apos;), data load exclusion for Peter Noges on 2020-11-05 during SFDC-0488, this line commented thereafter.*/
NOT(neo4j_apexBypass_context__c),
NOT(CONTAINS($User.Username, &quot;peter.noges@neo4j.com&quot;)), /*developer, exclude for data migration sfdc-0145*/


Quantity  &lt;&gt; 1
)</errorConditionFormula>
        <errorDisplayField>Other_Use_Case__c</errorDisplayField>
        <errorMessage>Quantity must be 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_opportunityProduct_fields_by_99</fullName>
        <active>true</active>
        <description>Added in a7z3s0000004SGsAAM</description>
        <errorConditionFormula>AND(
NOT(neo4j_apexBypass_context__c),
	NOT( $Profile.Name = &quot;System Administrator&quot;),
	
	OR(
	
	AND(
	OR(TEXT( Opportunity.StageName ) = &quot;Finance Review&quot;,Opportunity.IsWon),
	ISBLANK( TEXT( Invoice_Frequency__c ) )),
	
	AND(
	OR(TEXT( Opportunity.StageName) = &quot;Finance Review&quot;,Opportunity.IsWon),
	ISBLANK( TEXT( Payment_Terms__c ) )),
	
	AND(
	OR(TEXT( Opportunity.StageName) = &quot;Finance Review&quot;,Opportunity.IsWon),
	ISBLANK( TEXT( Auto_Renewal__c ) ))
	
	)
)</errorConditionFormula>
        <errorMessage>[Invoice Frequency], [Payment Terms], and [Auto Renewal?] are required to enter Stage Finance Review (a7z3s0000004SGsAAM)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Edits_in_Stage_Finance_Review</fullName>
        <active>true</active>
        <errorConditionFormula>if(
and(
NOT(neo4j_apexBypass_context__c),
ISPICKVAL(Opportunity.StageName,&quot;Finance Review&quot;),
NOT( $Permission.Opportunity_AllowStageChangeTo100)
),true,false
)</errorConditionFormula>
        <errorMessage>Edits are restricted while in Finance Review Stage... Please share your request with salesforce@neo4j.com.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Edits_in_Stage_Sales_Ops_Review</fullName>
        <active>true</active>
        <errorConditionFormula>if(
and(
NOT(neo4j_apexBypass_context__c),
ISPICKVAL(Opportunity.StageName,&quot;Sales Ops Review&quot;),
NOT( $Permission.Opportunity_AllowStageChangeTo99)
),true,false
)</errorConditionFormula>
        <errorMessage>Edits are restricted while in Sales Ops Review Stage...  Please share your request with salesforce@neo4j.com.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_ProductType_New_in_Renewal_Opps</fullName>
        <active>true</active>
        <description>Requirements from Renewal Leadership:
An opportunity of Opportunity.Type = &quot;Renewal&quot; should be allowed to have Products associated with it of Product.Type = &quot;Renewal&quot;, &quot;Up-sell&quot;, or &quot;Cross-sell&quot;. but never Product.Type = &quot;New&quot;</description>
        <errorConditionFormula>if(
AND(
NOT(neo4j_apexBypass_context__c),
 $Profile.Name != &apos;System Administrator&apos;,
 ISPICKVAL(Product_Type__c , &quot;New&quot;),
 ISPICKVAL(Opportunity.Type , &quot;Renewal&quot;) 
),

true,false)</errorConditionFormula>
        <errorDisplayField>ProductType__c</errorDisplayField>
        <errorMessage>Please select a different Product Type. The Product Type is incompatible with the Opportunity Type (Renewal).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_ProductTypes_in_TypeNew_Opps</fullName>
        <active>true</active>
        <description>an Oppty of Type = &quot;New&quot; should only be allowed products of Product.Type = &quot;New&quot;, but never &quot;Renewal&quot;, &quot;Up-sell&quot;, or &quot;Cross-sell&quot;. This ensures Sales always gets proper new and expansion credit, and Renewals always gets proper renewal and expansion credit</description>
        <errorConditionFormula>if(
AND(
NOT(neo4j_apexBypass_context__c),
 $Profile.Name != &apos;System Administrator&apos;,
 ISPICKVAL(Opportunity.Type , &quot;New&quot;),
 OR(
 	ISPICKVAL(Product_Type__c ,&quot;Renewal&quot;),
	ISPICKVAL(Product_Type__c , &quot;Cross-Sell&quot;),
	ISPICKVAL(Product_Type__c , &quot;Up-Sell&quot;)
	)
),

true,false)</errorConditionFormula>
        <errorDisplayField>ProductType__c</errorDisplayField>
        <errorMessage>Please select a different Product Type. The Product Type is incompatible with the Opportunity Type (New).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rollover_Percentage_Must_be_Populated</fullName>
        <active>true</active>
        <description>If “Eligible for Rollover” = Yes, “Rollover %” must be populated.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISPICKVAL(Eligible_for_Rollover__c, &quot;Yes&quot;), 
ISBLANK(RolloverPercent__c))</errorConditionFormula>
        <errorDisplayField>RolloverPercent__c</errorDisplayField>
        <errorMessage>Attention: “Rollover %” field must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription2_is_only_editable_by_apex</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ischanged( Subscription2__c),
not(neo4j_apexBypass_context__c)
)</errorConditionFormula>
        <errorDisplayField>Subscription2__c</errorDisplayField>
        <errorMessage>Save error.  This is a system field. Please do not change it.  Try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Upsell_Reason_Req_When_Type_Upsell</fullName>
        <active>true</active>
        <description>context: 2020-03-05T15:12:22-0800</description>
        <errorConditionFormula>AND( 

NOT($Permission.Opportunity_Unlock_And_Edit_Certain_Fields)/*dont impact close*/,
NOT( $Permission.Opportunity_AllowStageChangeTo99 )/*dont impact close*/,
NOT( $Permission.Opportunity_AllowStageChangeTo100 )/*dont impact close*/,
NOT(neo4j_apexBypass_context__c),


/* COMMENTED LINE:     NOT($User.Id == &apos;0053s00000355XM&apos;), data load exclusion for Peter Noges on 2020-11-05 during SFDC-0488, this line commented thereafter.*/

NOT(CONTAINS($User.Username, &quot;peter.noges@neo4j.com&quot;)), /*developer, exclude for data migration sfdc-0145*/


TEXT(   Product_Type__c   ) = &quot;Up-Sell&quot;,

OR(

CONTAINS(Product2.Name , &quot;Subscription&quot;),
CONTAINS(Product2.Name , &quot;Perpetual&quot;),  
CONTAINS(Product2.Name , &quot;Support&quot;)),
ISBLANK( TEXT(  Upsell_Reason__c  ) ))</errorConditionFormula>
        <errorDisplayField>Other_Use_Case__c</errorDisplayField>
        <errorMessage>Upsell Reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>req_RolloverPercent_when_Eligible</fullName>
        <active>true</active>
        <description>Rule introduced in SFDC-0542. This currently impacts only to system admins during this soft-launch. Requirement at inception was to prevent values higher than twenty percent and to require a value when Eligible_for_Rollover__c is &quot;Yes&quot;</description>
        <errorConditionFormula>AND(

$Profile.Name == &apos;System Administrator&apos;, /*(This rule is on only for system admins in this soft-launch of SFDC-0542)*/
NOT(neo4j_apexBypass_context__c),
NOT(CONTAINS($User.Username, &quot;peter.noges@neo4j.com&quot;)), /*developer, exclude for data migration sfdc-0145*/



OR(
 RolloverPercent__c &gt; 0.20, /*throw error if its over 20% regardless of Eligible_for_Rollover__c */
 AND(TEXT(Eligible_for_Rollover__c)==&apos;Yes&apos;,OR(isblank(RolloverPercent__c),RolloverPercent__c &gt; 0.20)) /*also throw error if its blank or over 20% and Eligible_for_Rollover__c is &apos;yes&apos; */
)

)</errorConditionFormula>
        <errorDisplayField>RolloverPercent__c</errorDisplayField>
        <errorMessage>This field must be less or equal to 20% when [Eligible for Rollover] is &quot;yes&quot;. (This rule is on only for system admins in this soft-launch of SFDC-0542)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>req_fields_for_Subscription_OppLines</fullName>
        <active>true</active>
        <description>Added in a7z3s0000004SGsAAM. 
Line item validation! Require Term dates @ 99% if opp has subscription products.
Previously this existed on the Opportunity and was &quot;Require Term dates @ 99% if &lt;opp has&gt; subscription products&quot;</description>
        <errorConditionFormula>AND(
NOT(neo4j_apexBypass_context__c),
	(NOT( $Profile.Name = &quot;System Administrator&quot;)),

	OR(
		AND(
			TEXT(  Opportunity.StageName ) = &quot;Finance Review&quot;,
				Subscription__c ,
			ISNULL( Term_Start_Date__c ) 
		),
	
		
		AND(
			TEXT( Opportunity.StageName) = &quot;Finance Review&quot;,
			Subscription__c,
			ISNULL( Term_End_Date__c ) )

	)
	
)</errorConditionFormula>
        <errorMessage>[Term Start Date], [Term End Date], are required to enter Stage Finance Review. (a7z3s0000004SGsAAM)</errorMessage>
    </validationRules>
</CustomObject>